--- a/css/login.css
+++ b/css/login.css
@@ -1,12 +1,3 @@
-body {
-    padding: 0;
-    margin: 0 auto;
-    background: #eceff1;
-    position: relative;
-    top: -35px;
-    font-family: arial;
-}
-
 #head {
     display: block;
     background: #363c76;
@@ -45,11 +36,11 @@ legend {
 
 #userdiv {
     background: #ffffff url('../img/logo2018.png') no-repeat center;
-    width: 120px;
-    height: 120px;
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
     margin: 5px;
-    background-size: 96px 96px;
+    background-size: 70px 70px;
 }
 
 
@@ -159,4 +150,56 @@ legend {
     max-width: 650px;
     width: 90%;
     margin: 0px auto;
+}
+
+
+/*---nuevos estilos----*/
+
+body {
+    background: #f0f3f5;
+    color: #fff;
+}
+
+header {
+    background: #9aca40;
+    padding: 5px;
+    margin-bottom: 20px;
+    margin-top: 55px;
+}
+
+.columnaTexto {
+    text-align: center;
+}
+
+.contenedor-main {
+    margin-bottom: 20px;
+}
+
+main {
+    background: #fff;
+    color: #424242;
+    padding: 20px 0
+}
+
+aside {
+    background: #dee5e8;
+    padding: 60px 0;
+    color: #0d47a1;
+}
+
+.widgets {
+    background: #f2f2f2;
+    color: #424242;
+    margin-bottom: 20px;
+}
+
+.widgets>div {
+    background: #2196f3;
+    color: #fff;
+    padding: 20px;
+}
+
+footer {
+    padding: 20px 0;
+    background: #1e1e1e;
 }
